[package]
name = "git_subscribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
directories = "4.0.1"
git2 = "0.15.0"
humantime = "2.1.0"
lazy_static = "1.4.0"
same-file = "1.0.6"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
